2017-09-29 Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import libpng-1.6.34.
	* version.ac: Adjust.

2017-08-24 Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import libpng-1.6.32.
	* version.ac: Adjust.

2017-07-27 Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import libpng-1.6.31.
	* version.ac: Adjust.

2017-06-28 Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import libpng-1.6.30.
	* version.ac: Adjust.

2017-03-27  Karl Berry  <karl@freefriends.org>

	* Makefile.am (AM_TESTS_ENVIRONMENT): use instead of TESTS_ENVIRONMENT.
	(EXTRA_DIST): TLpatches not Tlpatches.

2017-03-16 Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import libpng-1.6.29.
	* version.ac: Adjust.

2017-01-05 Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import libpng-1.6.28.
	* version.ac: Adjust.

2016-12-29 Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import libpng-1.6.27.
	* version.ac: Adjust.

2016-10-20 Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import libpng-1.6.26.
	* version.ac: Adjust.

2016-09-01 Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import libpng-1.6.25.
	* version.ac: Adjust.

2016-08-04 Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import libpng-1.6.24.
	* version.ac: Adjust.

2016-06-09 Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import libpng-1.6.23.
	* version.ac: Adjust.

2016-05-26 Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import libpng-1.6.22.
	* version.ac: Adjust.

2016-03-30  Karl Berry  <karl@tug.org>

	* Makefile.am (AM_CPPFLAGS): remove LIBPNG_USER_CPPFLAGS per Mojca.
	http://tug.org/pipermail/tlbuild/2016q1/003440.html

2016-03-28  Karl Berry  <karl@tug.org>

	* configure.ac: insert check for -std=c89 from Mojca.

2016-02-15  Karl Berry  <karl@tug.org>

	* libpng-PATCHES: rename from libpng-src-PATCHES.
	* Makefile.am (EXTRA_DIST): likewise.

2016-01-20  Karl Berry  <karl@tug.org>

	* Makefile.am (AM_CPPFLAGS): add LIBPNG_USER_CPPFLAGS for Mojca.
	http://tug.org/pipermail/tlbuild/2016q1/003327.html

2016-01-15 Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import libpng-1.6.21.
	* version.ac: Adjust.
